[WIN] Checkbox is not sized according to uiScale

XMLWordPrintable

    • generic
    • windows

      This bug was noticed when the following tests were open-sourced in JDK-8340077.

      test/jdk/java/awt/Checkbox/CheckboxNullLabelTest.java
      test/jdk/java/awt/Checkbox/CheckboxIndicatorSizeTest.java
      test/jdk/java/awt/Checkbox/CheckboxBoxSizeTest.java

            Assignee:
            Harshitha Onkar
            Reporter:
            Harshitha Onkar
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated: