8340870: [WIN] Checkbox is not sized according to uiScale